Add interaction listener and rider charge boss bar
- InteractionListener: wrench uncouple (sneak) via atomic
  TrainRegistry.uncoupleTail, preset cycling in config order with
  wrap-around, redstone dust/block charge top-up via ChargeModel,
  empty-hand engine toggle; boss bar show/hide on vehicle enter/exit;
  cancels VehicleEntityCollisionEvent between members of the same
  train (Task 6 handoff).
- ChargeDisplay: per-rider Adventure boss bar with pure format/
  progress/displaySpeed helpers; respects display.bossbar-enabled.
- RtConfig: preserve config.yml insertion order of speed-presets
  (Map.copyOf randomized it), so wrench cycling order is deterministic.
- 30 new headless tests; event wiring deferred to gate 7a.